fix truncate

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -34,7 +34,7 @@ main {
 }
 
 .app-img-box {
-  @apply xl:h-[526px] lg:h-[480px] md:h-[450px] sm:h-[410px] sm:w-1/4 w-full h-[280px] m-1 transition-width duration-250 hover:w-full;
+  @apply xl:h-[526px] lg:h-[480px] md:h-[450px] sm:h-[410px] sm:w-1/4 w-full h-[280px] m-1 transition-width duration-250 xl:hover:w-[454px] sm:hover:w-2/3;
 }
 
 ::-webkit-scrollbar {
